Implementado o banco de dados
Aqui realizei a implementação do banco de dados, para estar salvando as cores que escolhi na tabela, lá no meu banco de dados

--- a/ControleSmartWEB/CLPmonitor1/clpmonitor/src/main/resources/templates/index.html
+++ b/ControleSmartWEB/CLPmonitor1/clpmonitor/src/main/resources/templates/index.html
@@ -157,7 +157,9 @@
 
         <h2>CLP 1 (Matriz de 28 bytes)</h2>
         <div id="clp1-grid" class="grid"></div>
+        <button type="button" onclick="window.location.href='/editar_clp1'">Corrigir Estoque</button>
 
+        
         <h2>CLP 2 e 3</h2>
         <table>
             <thead>
