Alterado os nomes dos html e css

--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/editar_clp1.html
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/editar_clp1.html
@@ -3,7 +3,7 @@
 <head>
     <title>Corrigir Estoque</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/estiloso2.css}">
+    <link rel="stylesheet" th:href="@{/css/styleEditCLP.css}">
     <style>
         /* CABEÇALHO AZUL */
         header {
