--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/loja.html
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/loja.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Pedidos de Blocos</title>   
-    <link rel="stylesheet" th:href="@{/css/estiloso.css}">
+    <link rel="stylesheet" th:href="@{/css/styleLoja.css}">
 </head>
 <body>
     <!-- CABEÇALHO -->
