--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/static/css/styleLoja.css
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/static/css/styleLoja.css
@@ -261,3 +261,17 @@ hr {
     transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
+@keyframes spin {
+    0% { transform: rotateY(0deg); }
+    100% { transform: rotateY(180deg); }
+}
+
+.pedido-view {
+    position: relative;
+    transform-style: preserve-3d; /* Isso é importante para o efeito 3D */
+    perspective: 1000px; /* Adiciona profundidade à animação */
+}
+
+.spin-animation {
+    animation: spin 0.5s ease-in-out;
+}
