--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/home.html
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
       <div class="buttons">
         <button onclick="window.location.href='/editar_clp1'">Gestão de estoque</button>
         <button onclick="window.location.href='/pedidos'">Pedidos</button>
-        <button>Tela de algo</button>
+        <button onclick="window.location.href='/processo_bancada'">Processo Atual</button>
       </div>
       <div class="etapas-container">
         <div class="etapa-card">
