--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/static/css/styleEditCLP.css
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/static/css/styleEditCLP.css
@@ -419,6 +419,9 @@ header h1 {
       width: 90%;
       min-width: unset;
     }
+    .button-group button i {
+      margin-right: 8px;
+  }
   
     
   }
