--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/editar_clp1.html
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/editar_clp1.html
@@ -4,6 +4,7 @@
     <title>Corrigir Estoque</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/styleEditCLP.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         /* CABEÇALHO AZUL */
         header {
@@ -54,8 +55,12 @@
     <div class="container1">
         <div id="clp1-grid" class="grid1"></div>
         <div class="button-group">
-            <button type="button" onclick="window.location.href='/'">Cancelar</button>
-            <button id="atualizar" type="button">Atualizar</button>
+            <button type="button" onclick="window.location.href='/'">
+                <i class="fas fa-arrow-left"></i> Voltar
+            </button>
+            <button id="atualizar" type="button">
+                <i class="fas fa-sync-alt"></i> Atualizar
+            </button>
         </div>
     </div>
 
