Pequena alteração no html da tela home

--- a/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/home.html
+++ b/AppSmartWeb_Projeto-Base/AppSmartWeb_Projeto-Base/loja-pedido/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sistema de Gestão da Bancada</title>
   <link rel="stylesheet" th:href="@{/css/stylesHome.css}" href="/css/stylesHome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
 
@@ -72,7 +73,9 @@
   </main>
 
   <footer>
-    <p>Projeto desenvolvido por Miguel Augusto e Carlos Jhonne</p>
-  </footer>
+    <p>
+        © 2025 Projeto desenvolvido por Miguel Augusto e Carlos Jhonne<br>
+    </p>
+</footer>
 </body>
 </html>
